# SwapMaster

./: .gitignore  README.md  alembic.ini  pyproject.toml  ruff.toml
config/: config.yml  logging.yml
swapmaster/adapters/course_obtaining/: course_obtaining_gateway.py  static_method_gateway.py  stock_exchange_method_gateway.py
swapmaster/adapters/db/: currency_db.py  exceptions.py  factory.py  method_db.py  uow.py  user_db.py
swapmaster/adapters/mq/: __init__.py  factory.py  scheduler.py
swapmaster/adapters/remote_wallets/: reserve_obtaining.py
swapmaster/adapters/verification/: __init__.py  email_notifier.py
swapmaster/application/: __init__.py  authenticate.py  calculate_send_total.py  cancel_order.py  cash_verifier.py  create_commission.py  create_method.py  create_order.py  create_pair.py  create_requisite.py  create_reserve.py  create_user.py  finish_order.py  get_available_transfer_info.py  get_full_order.py  reserve_refresh.py  verifier.py  web_verifier.py
swapmaster/application/common/: __init__.py  course_obtainer.py  currency_gateway.py  interactor.py  method_gateway.py  notifier.py  reserve_refresh.py  task_manager.py  task_solver.py  user_gateway.py  verifier.py
swapmaster/application/order/: __init__.py  cancel.py  create.py  finish.py  get_full_order.py  set_paid_up.py
swapmaster/application/user/: create_user.py
swapmaster/core/: constants.py
swapmaster/main/: db_uow.py  di.py  ioc.py  parser.py  providers.py  tgbot.py  web.py
swapmaster/presentation/: interactor_factory.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth_handler.py
tests/mocks/: __init__.py  cash.py  commission.py  config.py  course.py  method.py  notifier.py  order.py  pair.py  requisite.py  reserve.py  task_manager.py  uow.py  user.py  verifier.py
tests/unit/: conftest.py
(+256 files in other folders)
