[tool.poetry]
name = "swapmaster"
version = "0.1.0"
description = ""
authors = ["Mikky07 <mesarevartem9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
fastapi = {extras = ["all"], version = "^0.109.0"}
colorlog = "^6.8.2"
asyncpg = "^0.29.0"
aiohttp = "^3.9.3"
mypy = "^1.8.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
bcrypt = "4.0.1"
apscheduler = "^3.10.4"
adaptix = "3.0.0b2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
