[project]
name = "swapmaster"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikky07", email = "mesarevartem9@gmail.com"},
]
dependencies = [
    "aiogram==3.4.1",
    "ruff>=0.3.2",
    "alembic>=1.13.1",
    "fastapi>=0.110.0",
    "APScheduler==4.0.0a4",
    "uvicorn>=0.28.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
