[project]
name = "swapmaster"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikky07", email = "mesarevartem9@gmail.com"},
]
dependencies = [
    "aiogram==3.4.1",
    "ruff>=0.3.2",
    "alembic>=1.13.1",
    "APScheduler==4.0.0a4",
    "uvicorn>=0.28.0",
    "pyyaml>=6.0.1",
    "dnspython>=2.6.1",
    "passlib>=1.7.4",
    "pyjwt>=2.8.0",
    "redis>=5.0.3",
    "fastapi==0.103.*",
    "colorlog>=6.8.2",
    "python-multipart>=0.0.9",
    "asyncpg>=0.29.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
